# deepmd_on_pytorch

./: .gitignore  run.sh
deepmd_pt/: dataset.py  descriptor.py  embedding_net.py  main.py  training.py
source/: CMakeLists.txt
source/lib/: CMakeLists.txt
source/lib/include/: gpu_cuda.h
source/op/: CMakeLists.txt  prod_env_mat.cpp  prod_force.cpp  prod_virial.cpp
